docs: fix two instructions that don't work, correct a third
All three found by checking the docs against the code rather than reading them.

`clj -M:<alias>` was documented as the way to run an example. Two problems:

- It should be `clojure`. `clj` wraps the launcher in rlwrap, which does not
  play well with a GUI app holding the main thread. deps.edn has carried a
  note saying so since before these pages existed, and every bb task shells
  out to `clojure` — the docs were the only place disagreeing.
- It only works on macOS. All 81 example aliases carry -XstartOnFirstThread,
  which macOS needs to run OpenGL on the main thread but which the JVM
  rejects as a fatal "Unrecognized option" elsewhere (verified). So a Linux
  reader following getting-started.md hit a JVM that would not boot, with
  nothing anywhere telling them `bb <name>` is the only path — bb/helpers.bb
  builds a different, flag-free command line per platform, and that fact was
  documented nowhere.

Both README and getting-started.md now say `clojure`, mark the alias path
macOS-only, and give the raw Linux command for anyone who would rather not
install babashka. troubleshooting.md gains the failure as its own entry,
keyed on the error text a reader would paste into a search engine.

The Panama warning entry I first wrote was wrong, and the probe that proved
it is worth recording: `--enable-native-access=ALL-UNNAMED` DOES suppress
"A restricted method in java.lang.foreign.Linker has been called" — running
the :check alias emits zero warnings, and dropping the flag emits four. So
the warning is not "expected on every run"; it means the project's JVM flags
are missing. Corrected here and in the bug-report template, which had
repeated the same wrong claim.

Also note the last line of that block ("Restricted methods will be blocked in
a future release"), so a reader knows it is a deprecation to fix rather than
noise to filter out.

While here: retitle getting-started's alias section to "Running by al